force-app/main/default/objects/Form_Line_Item__c/Form_Line_Item__c.object-meta.xml
<CustomObject>
    <description>A single data point within a Form. Flexibly typed so the same structure handles tabular rows (worker types), question answers (yes/no + explanation), and document-backed values across any government form.</description>
    <label>Form Line Item</label>
    <pluralLabel>Form Line Items</pluralLabel>
    <nameField>
        <displayFormat>LI-{00000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>