force-app/main/default/objects/Form_Line_Item__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName><label>Form</label><type>MasterDetail</type>
    <referenceTo>Form__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
</CustomField>