force-app/main/default/objects/Form_Line_Item__c/fields/Line_Group__c.field-meta.xml
<CustomField>
    <fullName>Line_Group__c</fullName><label>Line Group</label><type>Text</type><length>100</length>
    <description>Optional grouping, e.g. worker type "Registered Nurse", so a rule can reconcile within a group.</description>
</CustomField>