force-app/main/default/objects/Form_Line_Item__c/fields/Line_Key__c.field-meta.xml
<CustomField>
    <fullName>Line_Key__c</fullName><label>Line Key</label><type>Text</type><length>100</length>
    <description>Machine-readable key for this data point, e.g. RN_LABOUR_COST. Rules reference this.</description>
</CustomField>