force-app/main/default/objects/Form_Line_Item__c/fields/Line_Label__c.field-meta.xml
<CustomField>
    <fullName>Line_Label__c</fullName><label>Line Label</label><type>Text</type><length>255</length>
    <description>Human-readable label, e.g. "Registered Nurse - Labour Cost".</description>
</CustomField>