force-app/main/default/objects/Form_Line_Item__c/fields/Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Type__c</fullName><label>Line Type</label><type>Picklist</type>
    <description>Which value field is authoritative for this line.</description>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Number</fullName><default>false</default><label>Number</label></value>
        <value><fullName>Currency</fullName><default>true</default><label>Currency</label></value>
        <value><fullName>Text</fullName><default>false</default><label>Text</label></value>
        <value><fullName>Boolean</fullName><default>false</default><label>Boolean</label></value>
        <value><fullName>Date</fullName><default>false</default><label>Date</label></value>
    </valueSetDefinition></valueSet>
</CustomField>