force-app/main/default/objects/Form_Line_Item__c/fields/Prior_Value_Number__c.field-meta.xml
<CustomField>
    <fullName>Prior_Value_Number__c</fullName><label>Prior Period Value (Number)</label><type>Number</type><precision>16</precision><scale>2</scale>
    <description>The equivalent value from the prior period, for quarter-on-quarter plausibility checks.</description>
</CustomField>