force-app/main/default/objects/Form_Line_Item__c/fields/Value_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Value_Boolean__c</fullName><label>Value (Boolean)</label><type>Checkbox</type><defaultValue>false</defaultValue>
</CustomField>