force-app/main/default/objects/Form_Line_Item__c/fields/Value_Currency__c.field-meta.xml
<CustomField>
    <fullName>Value_Currency__c</fullName><label>Value (Currency)</label><type>Currency</type><precision>16</precision><scale>2</scale>
</CustomField>