force-app/main/default/objects/Form_Line_Item__c/fields/Value_Date__c.field-meta.xml
<CustomField>
    <fullName>Value_Date__c</fullName><label>Value (Date)</label><type>Date</type>
</CustomField>