force-app/main/default/objects/Form_Line_Item__c/fields/Value_Number__c.field-meta.xml
<CustomField>
    <fullName>Value_Number__c</fullName><label>Value (Number)</label><type>Number</type><precision>16</precision><scale>2</scale>
</CustomField>