force-app/main/default/objects/Form_Line_Item__c/fields/Value_Text__c.field-meta.xml
<CustomField>
    <fullName>Value_Text__c</fullName><label>Value (Text)</label><type>LongTextArea</type><length>32768</length><visibleLines>3</visibleLines>
</CustomField>